--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,6 +15,8 @@
       (function() {
         const query = window.location.search;
         const path = query.match(/path=([^&]*)/);
+        const repo = "/pokemon-johto-interactable-music-map";
+        const username = "nikouu"; // Updated username
         
         if (path && path[1]) {
           history.replaceState(null, null, 
